--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
-
-<head>
+<html>
+  <head>
   
-</head>
+  </head>
 
-<body>
-  <h1>Hello, World!</h1>
-</body>
+  <body>
+    <h1>Hello, World!</h1>
+  </body>
+</html>
